# take-me-back

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  README.md  dev_tasks.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
scripts/: validate_commit_msg.py
src/: main.py
src/config/: cors.py  deezer.py  frontend.py  jwt.py  oauth.py  spotify.py  tortoise.py
src/dependencies/: auth.py
src/dtos/: action_dto.py  album_review_dtos.py  song_review_dtos.py  song_review_message_dtos.py  spotify_dtos.py  user_dtos.py
src/errors/: discord_logger.py  global_error_handler.py
src/instances/: app_instances.py  http_client.py
src/models/: abstract_base_entity.py  album_review.py  song_review.py  song_review_message.py  user.py  user_song_review_action.py
src/routes/: action_routes.py  album_review_routes.py  auth_routes.py  me_routes.py  review_routes.py  song_review_message_routes.py  spotify_routes.py
src/services/auth/: build_spotify_login_url.py  create_user_and_session_service.py  create_user_spotify_login_url.py  refresh_token_service.py  spotify_callback_handler_service.py
src/services/likes/: like_unlike_clear_handler.py
src/services/me/: fetch_current_user.py  fetch_user_resume.py  fetch_user_status.py
src/services/messages/: create_song_review_nested_message.py  create_song_review_root_message.py  fetch_song_review_messages.py
src/services/reviews/: create_album_review.py  fetch_album_reviews.py  (+3 more)
src/utils/: auth.py  jwt.py  reviews.py  song_review_messages.py  spotify.py  users.py
(+6 files in other folders)
